crates/hsh-cli/tests/snapshots/snapshots__inspect_bcrypt_mcf.snap
---
source: crates/hsh-cli/tests/snapshots.rs
expression: stdout
snapshot_kind: text
---
format: bcrypt-mcf
algorithm: bcrypt
cost: 10
